[gd_scene load_steps=4 format=3 uid="uid://cwwaitliqbm1r"]

[ext_resource type="FontFile" uid="uid://bgdrs10x0o12h" path="res://assets/fonts/AnglicanText.ttf" id="1_m1ibt"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_w11xg"]
[ext_resource type="Theme" uid="uid://ddhhavwer07e5" path="res://assets/styles/button-scroll.tres" id="5_ssxf2"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_w11xg")

[node name="PauseLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.0
offset_top = 34.0
offset_right = 245.0
offset_bottom = 292.0
grow_horizontal = 2
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(0.909804, 0.654902, 0.137255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_fonts/font = ExtResource("1_m1ibt")
theme_override_font_sizes/font_size = 200
text = "Pauza"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1259.0
offset_top = -465.0
offset_right = 1672.0
offset_bottom = 888.0
color = Color(0, 0, 0, 0.505882)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.5
offset_top = -97.0
offset_right = 82.5
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 6

[node name="Continue" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_default_cursor_shape = 2
theme = ExtResource("5_ssxf2")
theme_override_font_sizes/font_size = 26
text = "Pokračovat"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_default_cursor_shape = 2
theme = ExtResource("5_ssxf2")
theme_override_font_sizes/font_size = 26
text = "Restartovat"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_default_cursor_shape = 2
theme = ExtResource("5_ssxf2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Nastavení"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_default_cursor_shape = 2
theme = ExtResource("5_ssxf2")
theme_override_font_sizes/font_size = 26
text = "Menu"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
